--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--The body section-->
     <body>
         <div >
-            <form action="LoginRegister" method="post">
+            <form action="" method="post">
           
                 <div id="login-box">
                 <div class="left-box">
